[package]
name = "steel-yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.5.0"
urlencoding = "2.1.2"
# `no_std` map
# Keep until https://github.com/rust-lang/rust/issues/27242 is resolved
hashbrown = "0.14.0"

[dev-dependencies]
criterion = "0.4.0"
libtest-mimic = "0.6.0"

[[test]]
name = "yaml_test_suite"
harness = false

[[bench]]
name = "event_processing"
harness = false

[profile.release]
opt-level=2