# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "yam-core",
    "yam-common",
    "yam-serde",
    "yam-test-bench"
]
resolver = "2"

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3


[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
