[package]
name = "yam-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

documentation = "https://docs.rs/yam-core"
repository = "https://github.com/Ygg01/yam-rs"
homepage = "https://github.com/Ygg01/yam-rs"

description = "Pure Rust YAML reader and writer (to be added)"
categories = ["parsing", "parser-implementation"]
keywords = ["yaml", "parser"]
licenses = ["MIT", "LGPLv3 "]
readme = "README.md"

authors = ["Ygg01 <y.laughing.man.y@gmail.com>"]

exclude =[
    "benches/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[dependencies]
memchr = "2.5.0"
urlencoding = "2.1.2"
# `no_std` map
# Keep until https://github.com/rust-lang/rust/issues/27242 is resolved
hashbrown = "0.14.0"


