[package]
name = "yam-core"
version = "0.1.0"
edition = "2024"

documentation = "https://docs.rs/yam-core"
repository = "https://github.com/Ygg01/yam-rs"
homepage = "https://github.com/Ygg01/yam-rs"

description = "Pure Rust YAML reader and writer (to be added)"
categories = ["parsing"]
keywords = ["yaml", "parser"]
license = "MIT OR LGPL-3.0-only"
readme = "README.md"
authors = [
    "Ygg01 <y.laughing.man.y@gmail.com>",
    # Saphyr.rs authors
    "David Aguilar <davvid@gmail.com>",
    "Ethiraric <ethiraric@gmail.com>",
    "Yuheng Chen <yuhengchen@sensetime.com>"
]

exclude =[
    "benches/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[dependencies]
# `no_std` map
# Keep until https://github.com/rust-lang/rust/issues/27242 is resolved
yam-common = { path = "../yam-common" }

[features]
no-inline = []

