[package]
name = "yam-dark-core"
version = "0.1.0"
edition = "2021"
authors = ["Ygg01 <y.laughing.man.y@gmail.com>"]
keywords = ["yaml", "simd", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
simdutf8 = { version = "0.1.4", features = ["aarch64_neon", "public_imp"] }
yam-core = { path = "../yam-core"}
core_detect = "1.0.0"
rand = "0.9.0-alpha.1"

[dev-dependencies]
criterion = "0.5.1"
libtest-mimic = "0.6.0"

[features]
no-inline = []
runtime-detection = []

[[bench]]
name = "chunky_iter"
harness = false