[package]
name = "yam-dark-core"
version = "0.1.0"
edition = "2021"
authors = ["Ygg01 <y.laughing.man.y@gmail.com>"]
keywords = ["yaml", "simd", "parser"]
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
simdutf8 = { version = "0.1.4", features = ["aarch64_neon", "public_imp"] }
#yam-core = { path = "../yam-core" }
core_detect = "1.0.0"


[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0-alpha.1"
rstest = "0.24.0"

[features]
default = []
debug = ["no-inline"]
no-inline = []
runtime-detection = []

[[bench]]
name = "chunky_iter"
harness = false

[[bench]]
name = "eq_bench"
harness = false

[[bench]]
name = "swizzle"
harness = false

[[bench]]
name = "count_cols"
harness = false

[[bench]]
name = "count_quotes"
harness = false