#[package]
#name = "yam-test-bench"
#version = "0.1.0"
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yam-core = {path = "../yam-core"}
yam-dark-core = { path = "../yam-dark-core" }
yam-common = { path = "../yam-common" }

[dev-dependencies]
libtest-mimic = "0.6.0"
rstest = "0.26.1"

[[test]]
name = "yaml_test_suite"
harness = false

