[package]
name = "yam-rs"
version = "0.1.0"
edition = "2021"

documentation = "https://docs.rs/yam-core"
repository = "https://github.com/Ygg01/yam-rs"
homepage = "https://github.com/Ygg01/yam-rs"

description = "Pure Rust YAML reader and writer (to be added)"
categories = ["parsing"]
keywords = ["yaml", "parser"]
license = "MIT OR LGPL-3.0-only"
readme = "README.md"

authors = ["Ygg01 <y.laughing.man.y@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
